--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@
   justify-content: center;
   align-items: center;
   padding: 10px;
+  margin-right: 400px;
 }
 
 .menusection nav ul {
@@ -46,6 +47,18 @@
   font-size: 20px;
 }
 
+.menubutton {
+  margin-left: 1200px;
+  margin-top: -150px;
+  margin-bottom: 100px;
+  border: 20px solid red;
+  border-width: 1px;
+  width: 130px;
+  border-radius: 20px;
+  padding: 10px;
+  color: red;
+}
+
 /* styling the hero section */
 .content {
   padding: 20px;
@@ -54,6 +67,7 @@
   width: 50%;
   margin: auto;
   margin-left: 410px;
+  /* background-image: url(../img/v870-tang-36.jpg); */
 }
 
 .content .textcontent h3 {
@@ -80,9 +94,11 @@
   margin: auto;
   margin-left: 250px;
   margin-bottom: 370px;
+  display: flex;
 }
 
 #button1 {
+  margin-right: 30px;
   color: white;
   padding: 10px 20px;
   cursor: pointer;
@@ -91,6 +107,7 @@
   border-radius: 30px;
   background-color: red;
 }
+
 #button2 {
   color: white;
   padding: 10px 20px;
@@ -272,14 +289,21 @@ button {
 
 .services {
   width: 100%;
+  margin-top: 90px;
   text-align: center;
   justify-content: center;
   font-size: 20px;
+  background-color: #fff4f4;
+  /* background-image: url(../img/35362.jpg); */
 }
 
 .services h3 {
   color: rgb(245, 55, 55);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.header{
+  
 }
 
 .services h1 {
@@ -297,6 +321,7 @@ button {
   width: 1500px;
   height: 300px;
   margin-left: 100px;
+  margin: 90px;
   display: flex;
   /* flex-direction: column; */
 }
@@ -355,7 +380,6 @@ button {
   width: 300px;
 }
 
-
 .section2 button {
   width: 100px;
   background-color: #ccc;
@@ -368,10 +392,11 @@ button {
   padding: 10px;
   /* border: 1px solid green;
   border-radius: 20px; */
-  background-color: #ccc;
+  background-color: #ffff;
   border: 2px solid black;
   border-radius: 30px;
   height: 270px;
+  border-color: white;
 }
 
 .section3 h3 {
